// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommandLineRemainder parses an action input with remainder 1`] = `
Array [
  "### --title output: ###",
  "--title",
  "The title",
  "### remainder output: ###",
  "the",
  "remaining",
  "args",
]
`;

exports[`CommandLineRemainder parses an action input with remainder flagged options 1`] = `
Array [
  "### --title output: ###",
  "--title",
  "The title",
  "### remainder output: ###",
  "--",
  "--the",
  "remaining",
  "--args",
]
`;

exports[`CommandLineRemainder prints the action help 1`] = `
"usage: example run [-h] [--title TEXT] ...

a longer description

positional arguments:
  \\"...\\"         The action remainder

optional arguments:
  -h, --help    show this help message and exit
  --title TEXT  A string
"
`;

exports[`CommandLineRemainder prints the global help 1`] = `
"usage: example [-h] [--verbose] <command> ...

An example project

positional arguments:
  <command>
    run       does the job

optional arguments:
  -h, --help  show this help message and exit
  --verbose   A flag that affects all actions

For detailed help about a specific command, use: example <command> -h
"
`;
